crates/husako-cli/tests/snapshots/integration__render_basic_yaml_snapshot.snap
---
source: crates/husako-cli/tests/integration.rs
assertion_line: 38
expression: yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
