crates/husako-cli/tests/snapshots/integration__render_project_snapshot.snap
---
source: crates/husako-cli/tests/integration.rs
expression: yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
